Fixed overflowed display on Chrome based browsers

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,12 @@ body {
     margin: 0;
 }
 
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
